--- a/TrailMix/Base.lproj/Main.storyboard
+++ b/TrailMix/Base.lproj/Main.storyboard
@@ -243,7 +243,6 @@
                                 </state>
                                 <connections>
                                     <action selector="abortButtonTapped:" destination="LA8-22-ULE" eventType="touchUpInside" id="KP9-rk-IV4"/>
-                                    <segue destination="15F-ki-IBR" kind="presentation" identifier="WikiLocationSegue" id="JFM-7v-quU"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Apu-gy-1gU">
@@ -251,6 +250,9 @@
                                 <state key="normal" title="Wiki Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="15F-ki-IBR" kind="presentation" id="ImT-pT-faS"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a5y-Az-JIc">
                                 <rect key="frame" x="75" y="75" width="450" height="450"/>
