--- a/TrailMix/Base.lproj/Main.storyboard
+++ b/TrailMix/Base.lproj/Main.storyboard
@@ -221,8 +221,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jj0-pc-TNV">
-                                <rect key="frame" x="248" y="40" width="104" height="32"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jj0-pc-TNV">
+                                <rect key="frame" x="248" y="40" width="104" height="31"/>
                                 <state key="normal" title="Visit This Place">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -231,22 +231,13 @@
                                 </connections>
                             </button>
                             <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ox-Bz-047">
-                                <rect key="frame" x="16" y="35.5" width="102" height="38"/>
+                                <rect key="frame" x="16" y="35" width="102" height="38"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
                                 <state key="normal" title="Cancel Trip">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="abortButtonTapped:" destination="LA8-22-ULE" eventType="touchUpInside" id="KP9-rk-IV4"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Apu-gy-1gU">
-                                <rect key="frame" x="259" y="570" width="80" height="30"/>
-                                <state key="normal" title="Wiki Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="15F-ki-IBR" kind="presentation" id="eja-rb-lhF"/>
                                 </connections>
                             </button>
                             <view contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="a5y-Az-JIc">
@@ -274,13 +265,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance: " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nwY-c2-R14">
-                                <rect key="frame" x="262" y="535" width="77" height="20.5"/>
+                                <rect key="frame" x="262" y="523" width="77" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ika-I3-0Ps">
-                                <rect key="frame" x="489" y="36" width="95" height="38"/>
+                                <rect key="frame" x="489" y="35" width="95" height="38"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
                                 <state key="normal" title="Pause Trip">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -290,6 +281,18 @@
                                     <action selector="pauseButtonTapped:" destination="LA8-22-ULE" eventType="touchUpInside" id="DPY-sj-MW3"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Apu-gy-1gU">
+                                <rect key="frame" x="0.0" y="558" width="600" height="42"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.47999999999999998" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="23"/>
+                                <state key="normal" title="Places Nearby">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="15F-ki-IBR" kind="presentation" id="eja-rb-lhF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -297,11 +300,12 @@
                             <constraint firstItem="oWP-zu-DEc" firstAttribute="top" secondItem="oh2-k0-mBE" secondAttribute="top" id="3U8-TY-bB9"/>
                             <constraint firstItem="jj0-pc-TNV" firstAttribute="top" secondItem="6NJ-8o-PKJ" secondAttribute="bottom" constant="13" id="9lG-ab-QAJ"/>
                             <constraint firstAttribute="bottom" secondItem="oWP-zu-DEc" secondAttribute="bottom" id="BCR-Mi-BDv"/>
-                            <constraint firstAttribute="centerX" secondItem="Apu-gy-1gU" secondAttribute="centerX" constant="1" id="BEB-m9-2yo"/>
+                            <constraint firstAttribute="centerX" secondItem="Apu-gy-1gU" secondAttribute="centerX" id="BEB-m9-2yo"/>
                             <constraint firstItem="Apu-gy-1gU" firstAttribute="top" secondItem="nwY-c2-R14" secondAttribute="bottom" constant="14" id="CH7-mq-aVl"/>
                             <constraint firstItem="L9g-au-7SK" firstAttribute="top" secondItem="6NJ-8o-PKJ" secondAttribute="bottom" constant="8" id="Eag-SA-c3G"/>
                             <constraint firstItem="4ox-Bz-047" firstAttribute="leading" secondItem="oh2-k0-mBE" secondAttribute="leadingMargin" id="Gb1-Ng-aAX"/>
                             <constraint firstAttribute="centerY" secondItem="a5y-Az-JIc" secondAttribute="centerY" id="Sen-2o-2x5"/>
+                            <constraint firstAttribute="width" secondItem="Apu-gy-1gU" secondAttribute="width" id="Yxc-lc-25b"/>
                             <constraint firstAttribute="centerY" secondItem="4ox-Bz-047" secondAttribute="centerY" multiplier="5.5" id="aM4-09-Pum"/>
                             <constraint firstItem="4ox-Bz-047" firstAttribute="centerY" secondItem="jj0-pc-TNV" secondAttribute="centerY" constant="-1" id="bWZ-Xi-zHF"/>
                             <constraint firstItem="jj0-pc-TNV" firstAttribute="top" secondItem="6NJ-8o-PKJ" secondAttribute="bottom" constant="20" id="bXK-Tu-WCM"/>
@@ -311,6 +315,7 @@
                             <constraint firstItem="Ika-I3-0Ps" firstAttribute="trailing" secondItem="oh2-k0-mBE" secondAttribute="trailingMargin" id="gWY-wf-ClW"/>
                             <constraint firstAttribute="centerX" secondItem="a5y-Az-JIc" secondAttribute="centerX" id="kDb-qc-RCy"/>
                             <constraint firstItem="jj0-pc-TNV" firstAttribute="trailing" secondItem="oh2-k0-mBE" secondAttribute="trailingMargin" id="msq-Gl-SdC"/>
+                            <constraint firstItem="Apu-gy-1gU" firstAttribute="height" secondItem="oh2-k0-mBE" secondAttribute="height" multiplier="0.07" id="nKS-E6-z27"/>
                             <constraint firstItem="oWP-zu-DEc" firstAttribute="top" secondItem="oh2-k0-mBE" secondAttribute="top" id="rgY-EY-h22"/>
                             <constraint firstAttribute="centerX" secondItem="nwY-c2-R14" secondAttribute="centerX" id="uOc-RA-pa0"/>
                             <constraint firstItem="Ika-I3-0Ps" firstAttribute="centerY" secondItem="4ox-Bz-047" secondAttribute="centerY" id="wBC-n9-Lul"/>
@@ -337,6 +342,7 @@
                         <outlet property="followArrowLabel" destination="L9g-au-7SK" id="922-wS-cln"/>
                         <outlet property="followTheArrowConstraint" destination="Eag-SA-c3G" id="RH4-gO-dwD"/>
                         <outlet property="pauseButton" destination="Ika-I3-0Ps" id="JZT-jh-ci8"/>
+                        <outlet property="placeNearbyButton" destination="Apu-gy-1gU" id="KqA-J9-yoS"/>
                         <outlet property="visitButton" destination="jj0-pc-TNV" id="X1Y-Cm-0ht"/>
                         <segue destination="AyS-1r-6Il" kind="presentation" identifier="DestinationReachedSegue" id="cJw-0w-RiT"/>
                     </connections>
